PROJECT(rpc)
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
SET(CMAKE_CXX_FLAGS "-g -Wall -std=c++11")

ADD_SUBDIRECTORY(proto)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main proto ${PROTOBUF_LIBRARY})
MESSAGE(STATUS "LIB_main:${PROTOBUF_LIBRARIES}")
