INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER message.proto)
ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})
TARGET_LINK_LIBRARIES(proto ${PROTOBUF_LIBRARY})
target_include_directories(proto PUBLIC ${PROTOBUF_INCLUDE_DIR})

MESSAGE(STATUS "LIB_proto:${PROTOBUF_LIBRARY}")
MESSAGE(STATUS "HDRS_proto:${PROTO_HEADER}")
MESSAGE(STATUS "SRCS_proto:${PROTO_SRC}")